--- a/csvtest.cabal
+++ b/csvtest.cabal
@@ -21,10 +21,14 @@ executable csvtest
   build-depends:       base >=4.7 && <4.8,
                        bytestring,
                        vector,
+                       text,
+                       transformers,
                        pipes,
                        pipes-bytestring,
                        pipes-csv,
+                       conduit,
                        csv-conduit,
+                       conduit-extra,
                        cassava
   hs-source-dirs:      .
   default-language:    Haskell2010
