--- a/csvtest.cabal
+++ b/csvtest.cabal
@@ -25,6 +25,7 @@ executable csvtest
                        transformers,
                        pipes,
                        pipes-bytestring,
+                       pipes-safe,
                        pipes-csv,
                        conduit,
                        csv-conduit,
